--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="./src/style.css">
 </head>
 
-<body>
-    <div class="flex justify-center md:flex md:justify-center items-center w-full h-[100vh] bg-slate-900">
-        <div class="w-full flex flex-col items-center rounded md:w-[500px]  ">
-            <h1 class="text-white text-center text-4xl p-4 rounded w-full bg-red-500">Week 5 Assigment </h1>
+<body class="">
+    <div class=" bg-black flex justify-center md:flex md:justify-center md:items-center w-full h-[100vh] md:bg-slate-900">
+        <div class=" m-1 border-2 border-solid border-gray-600 shadow-md shadow-white w-full flex flex-col items-center rounded md:w-[500px] ">
+            <h1 class="text-white text-center text-4xl p-4 shadow-md shadow-white rounded w-full bg-red-500  ">Week 5 Assigment </h1>
             <div class="flex flex-col w-full p-4 bg-black text-white items-center">
                 <h3 class="text-lg">For Question number 1 answer  <button class="bg-blue-500 rounded md:m-2 p-2" onclick="evenOdd()">Click me</button> </h3>
                 <p id="q1" class=" m-4 rounded  p-2 bg-green-600 ">Answer will show here</p>
@@ -21,7 +21,7 @@
                 <h3 class="text-lg">For Question number 2 answer <button class="bg-blue-500 rounded md:m-2 p-2" onclick="calculateResult()"> Click me</button> </h3>
                 <p id="q2" class=" m-4 rounded p-2 bg-green-600 ">Answer will show here</p>
             </div>
-           
+                
         </div>
 
     </div>
