--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="">
-    <div class=" bg-black flex justify-center md:flex md:justify-center md:items-center w-full h-[100vh] md:bg-slate-900">
+    <div class=" bg-black flex justify-center md:flex md:justify-center md:items-center w-full h-[100vh] ">
         <div class=" m-1 border-2 border-solid border-gray-600 shadow-md shadow-white w-full flex flex-col items-center rounded md:w-[500px] ">
             <h1 class="text-white text-center text-4xl p-4 shadow-md shadow-white rounded w-full bg-red-500  ">Week 5 Assigment </h1>
             <div class="flex flex-col w-full p-4 bg-black text-white items-center">
